# VO_Sim

./: .gitignore  PROGRESS.md  README.md  SETUP.md  pyproject.toml  setup.py
docs/: DESIGN.md
src/vo_sim/: __init__.py  cli.py  schemas.py
src/vo_sim/grading/: __init__.py
src/vo_sim/interview/: __init__.py
src/vo_sim/session/: __init__.py  manager.py  state_machine.py  storage.py
tests/: __init__.py  test_cli.py  test_schemas.py  test_session_manager.py  test_state_machine.py  test_storage.py
